style: fixed cut off flag in select form

--- a/src/Components/Flag/Flag.scss
+++ b/src/Components/Flag/Flag.scss
@@ -1,4 +1,7 @@
 .flag {
+  display: flex;
+  justify-content: center;
+
   span {
     display: inline-block;
     background-repeat: no-repeat;
